luci-theme-material: fix zones wrap

--- a/themes/luci-theme-material/htdocs/luci-static/material/cascade.css
+++ b/themes/luci-theme-material/htdocs/luci-static/material/cascade.css
@@ -2183,12 +2183,14 @@ span[data-tooltip] .label {
 
 .zonebadge-empty {
 	color: #404040;
+	text-wrap: auto;
 	background: repeating-linear-gradient(45deg, rgba(204, 204, 204, .5), rgba(204, 204, 204, .5) 5px, rgba(255, 255, 255, .5) 5px, rgba(255, 255, 255, .5) 10px);
 }
 
 .zone-forwards {
 	display: flex;
 	min-width: 10rem;
+	flex-wrap: nowrap;
 }
 
 .zone-forwards > * {
